# arch-analyser

./: .gitignore  CLAUDE.md  README.md  output.json  pyproject.toml
arch_analyser/: cache.py  cli.py  pipeline.py  schema.py
arch_analyser/prompts/: __init__.py  p1_context.py  p2_decompose.py  p3_patterns.py  p4_risks.py  p5_synthesis.py
reports/: brs_analysis.json  brs_analysis.md
tests/: fixtures.py  test_p1.py  test_p2.py
